# SiPlusPlus

./: README.md
lab1/: Makefile  Report.docx  ~$Report.docx
lab1/output/: func.cpp  main.cpp
lab1/src/: generator.cpp  input.txt  main.cpp
lab2/include/: Message.hpp
lab2/src/: Tester.cpp
lab3/: CMakeLists.txt  Report.docx
lab3/include/: Message.hpp
lab3/src/: Message.cpp  Tester.cpp
lab4/: CMakeLists.txt  Report.docx  ~$Report.docx
lab4/src/: Tester.cpp
